[tool.poetry]
name = "treeherder_tools"
version = "0.1.0"
description = ""
authors = ["Edwin Gao <egao@outlook.com>"]

packages = [
    { include = "treeherder_tools" }
]

[tool.poetry.scripts]
treetools = "treeherder_tools.main:main"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
